# GRRC_Robot_Manufacturing

./: Dockerfile  Dockerfile_pickit  can_practice_recieve.py  can_practice_send.py  docker-compose.yaml  grinding_test_zig.STL  simpleZig.STL  test_map.pcd  테스트용_1.STL
pickit_vision/: CMakeLists.txt  package.xml
pickit_vision/src/: vision_pickit.py
stl_reader/: CMakeLists.txt  package.xml  sewing_zig.STL
stl_reader/launch/: tool_trajectory.launch
stl_reader/src/: stl_tool_path.py
ur_ros_cartesian_control/ur_ros_cartesian_control/: CMakeLists.txt  ur.xacro
ur_ros_cartesian_control/ur_ros_cartesian_control/launch/: load_manipulator_system.launch
ur_ros_cartesian_control/ur_ros_cartesian_control/meshes/: grinder.STL  grinder_holder.STL  grinding_test.STL
ur_ros_cartesian_control/ur_ros_cartesian_control/src/: ur_point_node.py
ur_ros_cartesian_control/ur_ros_cartesian_control/urdf/: manufacture_system.xacro
urdf_simulation/: CMakeLists.txt  package.xml
urdf_simulation/meshes/: UR5_socket.STL
urdf_simulation/urdf/: manufacturing_robot.urdf
