<?xml version="1.0"?>
<package format="2">
  <name>stl_reader</name>
  <version>0.0.0</version>
  <description>The pickit custom package</description>

  <maintainer email="root@todo.todo">root</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
